--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "description": ",-----.,--.                  ,--. ,---.   ,--.,------.  ,------.     '  .--./|  | ,---. ,--.,--. ,-|  || o   \\  |  ||  .-.  \\ |  .---'     |  |    |  || .-. ||  ||  |' .-. |`..'  |  |  ||  |  \\  :|  `--,      '  '--'\\|  |' '-' ''  ''  '\\ `-' | .'  /   |  ||  '--'  /|  `---.      `-----'`--' `---'  `----'  `---'  `--'    `--'`-------' `------'     -----------------------------------------------------------------",
+  "name": "mathfloor",
+  "version": "0.0.1",
+  "description": "trying to use Math.floor to understand testing",
   "main": "index.js",
   "scripts": {
     "test": "jasmine-node spec/ --autotest --watch **/*.js  --color --verbose --captureExceptions"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bilw/mathfloor-spec.git"
+  },
+  "author": "William Weis",
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine-node": "^1.14.5"
+  }
 }
